--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react": "18.3.1",
     "react-native": "0.75.2",
     "react-native-calendars": "^1.1306.0",
+    "react-native-gesture-handler": "^2.20.1",
     "react-native-modal": "^13.0.1",
+    "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-vector-icons": "^10.1.0"
