--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -37,3 +37,7 @@ newArchEnabled=false
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+#24.11.30 react-native-svg호환성 문제로 추가 => 해결
+newArchEnabled=false
+
