--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-seoul/naver-login": "^4.0.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "@reduxjs/toolkit": "^2.4.0",
     "react": "18.3.1",
     "react-native": "0.75.2",
     "react-native-calendars": "^1.1306.0",
@@ -26,7 +27,8 @@
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-svg": "^15.8.0",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-vector-icons": "^10.1.0",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
