--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "prestart": "node scripts/populateExercises.js",   
+    "prestart": "node scripts/populateExercises.js && node scripts/importFoodData.js",
     "start": "node ./bin/www"
   },
   "dependencies": {
@@ -12,6 +12,7 @@
     "connect-mongo": "^5.1.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "express": "~4.16.1",
@@ -19,7 +20,7 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.6.2",
+    "mongoose": "^8.9.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "tesseract.js": "^5.1.1"
