--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native-stack": "^6.11.0",
     "@reduxjs/toolkit": "^2.4.0",
     "dayjs": "^1.11.13",
+    "jwt-decode": "^3.1.2",
     "react": "18.3.1",
     "react-native": "0.75.2",
     "react-native-calendars": "^1.1306.0",
