--- a/package.json
+++ b/package.json
@@ -24,13 +24,16 @@
     "react-native-calendars": "^1.1306.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.20.2",
+    "react-native-gifted-charts": "^1.4.55",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
-    "react-native-svg": "^15.8.0",
+    "react-native-svg": "^15.11.1",
     "react-native-vector-icons": "^10.1.0",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "victory-native": "^41.16.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
