--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^5.0.6",
     "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-community/progress-bar-android": "^1.0.5",
     "@react-native-picker/picker": "^2.8.0",
@@ -23,11 +24,11 @@
     "react-native": "0.75.2",
     "react-native-calendars": "^1.1306.0",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-gesture-handler": "^2.20.2",
+    "react-native-gesture-handler": "^2.22.1",
     "react-native-gifted-charts": "^1.4.55",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
-    "react-native-reanimated": "^3.16.1",
+    "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-svg": "^15.11.1",
