--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native": "0.75.2",
     "react-native-calendars": "^1.1306.0",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-confetti-cannon": "^1.5.2",
     "react-native-gesture-handler": "^2.22.1",
     "react-native-gifted-charts": "^1.4.55",
     "react-native-linear-gradient": "^2.8.3",
