--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-gesture-handler": "^2.22.1",
     "react-native-gifted-charts": "^1.4.55",
+    "react-native-image-picker": "^8.0.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "^3.16.7",
